# DOGS

./: .env.example  .gitignore  DEPLOY.md  DOGS_Architecture_Specification.md  DOGS_Dev_Plans_Index.md  DOGS_Phase1_Dev_Plan.md  DOGS_Phase2_Dev_Plan.md  DOGS_Phase3_Dev_Plan.md  DOGS_Phase4_Dev_Plan.md  DOGS_Phase5_Dev_Plan.md  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml  deploy.yml
api/: .env.example  Dockerfile  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 001_create_dogs_schema.py  001_initial_schema.py  002_directory_entry_schema_updates.py  002_directory_entry_status.py  003_suggested_category.py  004_directory_entry_edit_token.py
api/app/: config.py  database.py  main.py  openapi_extra.py
api/app/models/: __init__.py  category.py  cleanup.py  directory.py  trash_report.py
api/app/routes/: admin.py  categories.py  cleanups.py  directory.py  erd.py  trash_reports.py
api/app/schemas/: __init__.py  categories.py  cleanup.py  directory.py  extract.py  location.py  photo.py  trash_report.py
api/app/services/: cleanup_service.py  directory_service.py  erd_service.py  geocoding.py  images.py  scraping.py  sheet_sync.py  storage.py  trash_report_service.py
docs/: erd.mmd
openapi/: dogs-schemas.json
scripts/: export_openapi.py  generate_erd.py  import_csv.py  setup_venv.ps1  setup_venv.sh
web/: index.html  package-lock.json  package.json
web/src/: App.tsx  index.css  vite-env.d.ts
web/src/api/: admin.ts  categories.ts  client.ts  directory.ts  photos.ts  types.ts
(+29 files in other folders)
