[project]
name = "dogs-api"
version = "0.1.0"
description = "DOGS canonical data API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy>=2.0.40",
    "psycopg2-binary>=2.9",
    "pydantic-settings>=2.0",
    "alembic>=1.13",
    "google-api-python-client>=2.120",
    "google-auth>=2.28",
    "google-cloud-storage>=2.16",
    "httpx>=0.25",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "python-multipart>=0.0.6",
    "curl_cffi>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.1",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"
